# sixu

./: .gitignore  Cargo.toml  cst.md  note.md  package.json  readme.md
.github/: copilot-instructions.md
.github/workflows/: release.yml  test.yml
docs/: ast-fingerprint.md  lsp.md  syntax.md
examples/: sample.sixu
sixu/: CHANGELOG.md  Cargo.toml
sixu-lsp/: Cargo.toml
sixu-lsp/src/: cst_helper.rs  formatter.rs  lib.rs  main.rs  scanner.rs  schema.rs
sixu-lsp/tests/: completion.rs  diagnostics.rs  formatting.rs
sixu-lsp/tests/fixtures/diagnostics/: 01_no_errors.sixu  02_unknown_command.sixu  03_missing_required.sixu  04_unknown_parameter.sixu  05_type_mismatch.sixu  06_syntax_error.sixu  07_script_block.sixu  08_trailing_content.sixu  09_unquoted_string.sixu  10_misspelled_command.sixu  11_systemcall_unquoted.sixu  12_multiple_errors.sixu
sixu-lsp/tests/helpers/: mod.rs
sixu-vscode-extension/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.mjs  language-configuration.json  package.json  tsconfig.json  vsc-extension-quickstart.md
sixu-vscode-extension/scripts/: package.mjs
sixu-vscode-extension/src/: extension.mjs  extension.ts
sixu/examples/: parse.rs  sample.sixu
sixu/src/: error.rs  executor.rs  fingerprint.rs  format.rs  lib.rs  parser.rs  result.rs  runtime.rs
sixu/src/cst/: formatter.rs  mod.rs  node.rs  parser.rs  span.rs
sixu/src/parser/: argument.rs  attribute.rs  block.rs  command_line.rs  comment.rs  identifier.rs  paragraph.rs  parameter.rs  primitive.rs  rvalue.rs  scene.rs  systemcall_line.rs  template.rs  text.rs  variable.rs
sixu/src/runtime/: callback.rs  datasource.rs  executor.rs  state.rs
sixu/tests/: attribute_runtime.rs  cst_format.rs  fingerprint.rs  usage.rs
sixu/tests/fixtures/format/: README.md
sixu/tests/fixtures/format/output/: 01_simple_paragraph.sixu  02_command_basic.sixu  03_systemcall.sixu  04_text_and_comment.sixu  05_nested_blocks.sixu  06_embedded_code.sixu  07_parameters.sixu  08_mixed_content.sixu  09_command_paren.sixu  10_multi_paragraphs.sixu
sixu/tests/fixtures/format/source/: 01_simple_paragraph.sixu  02_command_basic.sixu  03_systemcall.sixu  04_text_and_comment.sixu  05_nested_blocks.sixu  06_embedded_code.sixu  07_parameters.sixu  08_mixed_content.sixu  09_command_paren.sixu  10_multi_paragraphs.sixu
src/: error.rs  format.rs  lib.rs  parser.rs  result.rs  runtime.rs
src/parser/: argument.rs  (+13 more)
(+8 files in other folders)
