[package]
edition = "2024"
name = "sixu-lsp"
version = "0.1.0"

[dependencies]
dashmap = "6.1.0"
nom = "8.0"
nom-language = "0.1"
ropey = "1.6.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sixu = {path = "../sixu", features = ["cst"]}
tokio = {version = "1", features = ["full"]}
tower-lsp-server = "0.23"

[dev-dependencies]
futures = "0.3"
tower = "0.5"
