[package]
authors = ["Icemic <bingfeng.web@gmail.com>"]
description = "Experimental Visual Novel Scripting Language"
edition = "2021"
license = "MPL-2.0"
name = "sixu"
repository = "https://github.com/Icemic/sixu"
version = "0.6.0"

[features]
default = ["serde", "ts"]
serde = ["dep:serde"]
ts = ["dep:ts-rs"]

[dependencies]
anyhow = "1"
arc-swap = "1.7"
log = "0.4"
nom = "8.0"
nom-language = "0.1"
pollster = "0.4"
thiserror = "2"

serde = {version = "1", features = ["derive"], optional = true}
serde_json = "1"
ts-rs = {version = "11.1", optional = true}

[dev-dependencies]
tokio = {version = "1", features = ["rt", "macros"]}
